Preload: Better reason message for internal parents on windows

Related to bug #78881.